working on fixing the alignment of the right container - holding the imgs - for the about page

--- a/frontend/src/App/styles/components/_map.scss
+++ b/frontend/src/App/styles/components/_map.scss
@@ -10,7 +10,7 @@
       color: $black;
       background-color: $blue-1;
       border: 2px solid $blue-3;
-      padding: 0.5rem;
+      padding: 0.25rem 1rem;
       border-radius: 1rem;
       transition: 0.2s;
       cursor: pointer;
