--- a/frontend/src/App/styles/layout/_containers.scss
+++ b/frontend/src/App/styles/layout/_containers.scss
@@ -124,18 +124,26 @@
             @include flexCenterCenter($flex-direction: column);
 
             @media (max-width: 950px) {
-                width: 100%;
+                height: 100%;
+				width: 100%;
             }
         }
+
+		&--img {
+			@include flexCenterCenter($flex-direction: column);
+			@include heightWidth100();
+		}
     }
 
     &__arrows {
         &--container {
             @include flexCenterCenter($justify-content: space-between);
             width: 15rem;
-            transform: translateY(1rem);
-            position: absolute;
-            bottom: 20vh;
+			margin-top: 3rem;
+
+			@media (max-width: 950px) {
+				bottom: 14%;
+			}
 		}
 	}
 }
