--- a/frontend/src/App/styles/screens/_about.scss
+++ b/frontend/src/App/styles/screens/_about.scss
@@ -3,8 +3,6 @@
     &__image {
         width: 50rem;
         height: auto;
-        position: absolute;
-        bottom: 30vh;
         box-shadow: 0.3rem 0.3rem 0.6rem #000;
 
         @media (max-width: 1150px) {
